--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
     "axios": "^0.27.2",
     "element-plus": "^2.2.15",
     "pinia": "^2.0.21",
@@ -16,12 +17,17 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@types/node": "^18.7.14",
     "@vitejs/plugin-vue": "^3.0.3",
+    "pinia-plugin-persistedstate": "^2.1.1",
     "sass": "^1.54.6",
     "typescript": "^4.6.4",
+    "unocss": "^0.45.14",
     "unplugin-auto-import": "^0.11.2",
+    "unplugin-icons": "^0.14.9",
     "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.7",
+    "vite-plugin-inspect": "^0.6.1",
     "vue-tsc": "^0.39.5"
   }
 }
